add loading indicator

--- a/packages/host/index.html
+++ b/packages/host/index.html
@@ -14,7 +14,11 @@
 </head>
 
 <body>
-    <div id="help">
+    <div id="loading" style="display: block; text-align: center; padding: 50px; font-size: 18px;">
+        Loading...
+    </div>
+    
+    <div id="help" style="display: none;">
         <h1>Interactive Document Host</h1>
 
         You can render interactive documents here 4 ways:
