--- a/packages/host/index.html
+++ b/packages/host/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div id="loading" style="display: block; text-align: center; padding: 50px;">
+    <div id="loading" style="text-align: center; padding: 50px;">
         Loading...
     </div>
     
@@ -29,7 +29,7 @@
             <li>Via file upload: click the button below to choose a file</li>
         </ul>
 
-        <button id="upload-btn">Choose File to Upload</button>
+        <button type="button" id="upload-btn">Choose File to Upload</button>
         <input type="file" id="file-input" accept=".md" style="display: none;">
     </div>
 
