--- a/packages/host/index.html
+++ b/packages/host/index.html
@@ -27,6 +27,7 @@
             <li>Via drag and drop: drop a markdown file onto this page</li>
             <li>Via url parameter: add /?load=url/to/your/file.md to the url</li>
             <li>Via file upload: click the button below to choose a file</li>
+            <li>Via postmessage: send markdown content to this page using the <code>window.postMessage</code> API with the property <code>markdown</code></li>
         </ul>
 
         <button type="button" id="upload-btn">Choose File to Upload</button>
