--- a/packages/renderer/test/index.html
+++ b/packages/renderer/test/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mdv test</title>
     <link href="https://unpkg.com/tabulator-tables@6.3.0/dist/css/tabulator.min.css" rel="stylesheet" />
-    
+
     <script src="https://cdn.jsdelivr.net/npm/markdown-it/dist/markdown-it.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega@5.29.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.20.1"></script>
@@ -14,44 +14,51 @@
     <script src="../dist/umd/idocs.umd.js"></script>
 
     <style>
-        body {
-            font-family: sans-serif;
-            display: flex;
-            margin: 0;
-            height: 100vh;
-        }
+    html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    }
 
-        #editor,
-        #content {
-            flex: 1;
-            overflow: auto;
-            height: 100%;
-        }
+    body {
+        height: 100vh;
+    }
 
-        #editor {
-            padding: 20px;
-            box-sizing: border-box;
-        }
+    #editor, #content {
+        height: 100%;
+    }
 
-        textarea {
-            width: 100%;
-            height: 80%;
-            resize: none;
-        }
+    body {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        gap: 0;
+        height: 100vh;
+    }
 
-        button {
-            display: block;
-            width: 100%;
-            padding: 10px 0;
-            margin-top: 10px;
-            font-size: 16px;
-        }
+    #editor {
+        display: flex;
+        flex-direction: column;
+        padding: 0;
+    }
 
-        pre code {
-            background-color: #f5f5f5;
-            padding: 10px;
-            display: block;
-        }
+    #markdown-input {
+        width: 100%;
+        height: 100%;
+        resize: none;
+        box-sizing: border-box;
+        font-family: monospace;
+        font-size: 1rem;
+        padding: 1rem;
+    }
+
+    #content {
+        overflow: auto;
+        padding: 1rem;
+        box-sizing: border-box;
+        background: #fafbfc;
+    }
+
+        
     </style>
 </head>
 
@@ -337,7 +344,6 @@ The literal text is {selectedColor}.
 
 Click the map above to show related data.
 </textarea>
-        <button onclick="renderMarkdown()">Render</button>
     </div>
     <div id="content"></div>
 
@@ -345,15 +351,8 @@ Click the map above to show related data.
         const { IDocs } = window;
         console.log(IDocs);
 
-        const mdvr = new IDocs.Renderer(document.getElementById('content'));
+        const mdvr = IDocs.bindTextarea(document.getElementById('markdown-input'), document.getElementById('content'));
         console.log('instance', mdvr);
-
-        function renderMarkdown() {
-            const markdown = document.getElementById('markdown-input').value;
-            mdvr.render(markdown);
-        }
-
-        renderMarkdown();
     </script>
 
 </body>
