--- a/packages/renderer/test/index.html
+++ b/packages/renderer/test/index.html
@@ -14,58 +14,43 @@
     <script src="../dist/umd/idocs.umd.js"></script>
 
     <style>
-    html, body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-    }
+        #markdown-input {
+            background-color: snow;
+            visibility: hidden;
+            opacity: 0;
+            position: fixed;
+            top: 0;
+            left: -50%;
+            width: 50%;
+            height: 100vh;
+            resize: none;
+            padding: 20px;
+            box-sizing: border-box;
+            pointer-events: none;
+            transition: left 0.3s ease-in-out, opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+        }
 
-    body {
-        height: 100vh;
-    }
+        body.edit #markdown-input {
+            visibility: visible;
+            opacity: 1;
+            left: 0%;
+            pointer-events: auto;
+        }
 
-    #editor, #content {
-        height: 100%;
-    }
+        #content {
+            transition: margin-left 0.3s ease-in-out;
+        }
 
-    body {
-        display: grid;
-        grid-template-columns: 1fr 2fr;
-        gap: 0;
-        height: 100vh;
-    }
-
-    #editor {
-        display: flex;
-        flex-direction: column;
-        padding: 0;
-    }
-
-    #markdown-input {
-        width: 100%;
-        height: 100%;
-        resize: none;
-        box-sizing: border-box;
-        font-family: monospace;
-        font-size: 1rem;
-        padding: 1rem;
-    }
-
-    #content {
-        overflow: auto;
-        padding: 1rem;
-        box-sizing: border-box;
-        background: #fafbfc;
-    }
-
-        
+        body.edit #content {
+            margin-left: 50%;
+            padding-left: 8px;  /* mimic the body margin */
+        }
     </style>
 </head>
 
-<body>
+<body class="edit">
 
-    <div id="editor">
-        <textarea id="markdown-input">
+    <textarea id="markdown-input" placeholder="Type your Interactive Document markdown here...">
 # Interactive Markdown with Shared Signals in Vega
 
 ## Mermaid Diagram
@@ -344,7 +329,7 @@ The literal text is {selectedColor}.
 
 Click the map above to show related data.
 </textarea>
-    </div>
+
     <div id="content"></div>
 
     <script>
