host accept idoc.json

--- a/packages/host/index.html
+++ b/packages/host/index.html
@@ -31,7 +31,7 @@
         </ul>
 
         <button type="button" id="upload-btn">Choose File to Upload</button>
-        <input type="file" id="file-input" accept=".md" style="display: none;">
+        <input type="file" id="file-input" accept=".idoc.md,.idoc.json" style="display: none;">
     </div>
 
     <div id="app"></div>
