Add upload button and file input to Host class options

--- a/packages/host/index.html
+++ b/packages/host/index.html
@@ -40,7 +40,9 @@
         new Host({
             app: '#app',
             loading: '#loading',
-            help: '#help'
+            help: '#help',
+            uploadButton: '#upload-btn',
+            fileInput: '#file-input',
         });
     </script>
 
