--- a/packages/markdown/test/index.html
+++ b/packages/markdown/test/index.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vega@5.29.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.20.1"></script>
     <script src="https://unpkg.com/tabulator-tables@6.3.0/dist/js/tabulator.min.js"></script>
-    <script src="../dist/umd/idocs.renderer.umd.js"></script>
+    <script src="../dist/umd/idocs.markdown.umd.js"></script>
 
     <style>
         #markdown-input {
