use markdown namespace

--- a/packages/vscode/html/template.html
+++ b/packages/vscode/html/template.html
@@ -24,7 +24,7 @@
     <div id="content"></div>
 
     <script>
-        IDocs.bindTextarea(document.getElementById('markdown-input'), document.getElementById('content'));
+        IDocs.markdown.bindTextarea(document.getElementById('markdown-input'), document.getElementById('content'));
     </script>
 
 </body>
