--- a/packages/vscode/html/preview.html
+++ b/packages/vscode/html/preview.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Document Host</title>
+    <title>Interactive Document Preview</title>
     {{RESOURCE_LINKS}}
 </head>
 <body>
