--- a/packages/host/index.html
+++ b/packages/host/index.html
@@ -30,6 +30,7 @@
             <li><b>Drag and drop</b>: drop a markdown file onto this page</li>
             <li><b>URL parameter</b>: add /?load=url/to/your/file.md to the url</li>
             <li><b>File upload</b>: click the button below to choose a file</li>
+            <li><b>PostMessage</b>: send markdown content to this page using the <code>window.postMessage</code> API with the property <code>markdown</code></li>
         </ul>
 
         <button type="button" id="upload-btn">Choose File to Upload</button>
