editor uses postmessage

--- a/packages/editor/index.html
+++ b/packages/editor/index.html
@@ -20,9 +20,9 @@
     <div id="app"></div>
 
     <script type="module">
-        import { Editor } from '/src/index.ts';
+        import { App } from '/src/index.ts';
         const root = ReactDOM.createRoot(document.getElementById("app"));
-        root.render(React.createElement(Editor));
+        root.render(React.createElement(App));
     </script>
 
 </body>
