--- a/packages/vscode/html/edit.html
+++ b/packages/vscode/html/edit.html
@@ -9,11 +9,12 @@
 <body>
 	<div id="app"></div>
 
-    {{HOST_SCRIPT}}
+    {{EDITOR_OPTIONS}}
 
     <script>
+        const editorProps = { ...editorOptions, ...{ postMessageTarget: acquireVsCodeApi() } };
         const root = ReactDOM.createRoot(document.getElementById("app"));
-        root.render(React.createElement(IDocs.editor.Editor));
+        root.render(React.createElement(IDocs.editor.Editor, editorProps));
     </script>
 
 </body>
