--- a/packages/markdown/test/index.html
+++ b/packages/markdown/test/index.html
@@ -64,6 +64,12 @@ C -->|One| D[Result 1]
 C -->|Two| E[Result 2]
 ```
 
+```css
+body {
+ color: steelblue;
+}
+```
+
 ## Color Picker
 
 This dropdown controls the color of the rectangles below.
