--- a/packages/sandbox/resources/markdown.html
+++ b/packages/sandbox/resources/markdown.html
@@ -5,20 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{TITLE}}</title>
-    <link href="https://unpkg.com/tabulator-tables@6.3.0/dist/css/tabulator.min.css" rel="stylesheet" />
 
-    <script src="https://cdn.jsdelivr.net/npm/markdown-it/dist/markdown-it.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vega@5.29.0"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.20.1"></script>
-    <script src="https://unpkg.com/tabulator-tables@6.3.0/dist/js/tabulator.min.js"></script>
+    {{DEPENDENCIES}}
 
     {{RENDERER_SCRIPT}}
+
+    {{RENDERER_OPTIONS}}
 
     {{MARKDOWN_SCRIPT}}
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            const renderer = new IDocs.markdown.Renderer(document.body);
+            const renderer = new IDocs.markdown.Renderer(document.body, rendererOptions);
             renderer.render(markdown);
 
             //add listener for postMessage
