--- a/packages/vscode/html/markdown.html
+++ b/packages/vscode/html/markdown.html
@@ -5,28 +5,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{TITLE}}</title>
-    <link href="https://unpkg.com/tabulator-tables@6.3.0/dist/css/tabulator.min.css" rel="stylesheet" />
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+            margin: 0;
+        }
 
-    <script src="https://cdn.jsdelivr.net/npm/markdown-it/dist/markdown-it.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vega@5.29.0"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.20.1"></script>
-    <script src="https://unpkg.com/tabulator-tables@6.3.0/dist/js/tabulator.min.js"></script>
+        main {
+            display: flex;
+            flex: 1;
+        }
 
-<!-- TODO: use CDN version -->
-{{RENDERER_SCRIPT}}
+        textarea {
+            flex: 1;
+            resize: none;
+            display: none;
+        }
+
+        iframe {
+            flex: 2;
+        }
+
+        footer {
+            font-size: small;
+            padding: 3px;
+            background: #f0f0f0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    </style>
+
+    {{SANDBOX_UMD_JS}}
 
 </head>
 
 <body>
-
-    <textarea id="markdown-input" style="display:none;min-height:300px;width:100%;" placeholder="Type your Interactive Document markdown here...">{{MARKDOWN_CONTENT}}</textarea>
-
-    <div id="content"></div>
+    <main>
+        <textarea id="markdown-input"
+            placeholder="Type your Interactive Document markdown here...">{{MARKDOWN_CONTENT}}</textarea>
+    </main>
+    <footer>
+        Powered by <a href="https://microsoft.github.io/chartifact">Chartifact</a>
+    </footer>
 
     <script>
-        IDocs.markdown.bindTextarea(document.getElementById('markdown-input'), document.getElementById('content'));
+        const textarea = document.getElementById('markdown-input');
+        const sandbox = new IDocs.sandbox.Sandbox('main', { markdown: textarea.value });
+        textarea.addEventListener('input', () => {
+            sandbox.send({ markdown: textarea.value });
+        });
     </script>
-
 </body>
 
 </html>
