use sandbox for html sharing

--- a/packages/vscode/html/json.html
+++ b/packages/vscode/html/json.html
@@ -5,26 +5,79 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{TITLE}}</title>
-    <link href="https://unpkg.com/tabulator-tables@6.3.0/dist/css/tabulator.min.css" rel="stylesheet" />
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+            margin: 0;
+        }
 
-    <script src="https://cdn.jsdelivr.net/npm/markdown-it/dist/markdown-it.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vega@5.29.0"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.20.1"></script>
-    <script src="https://unpkg.com/tabulator-tables@6.3.0/dist/js/tabulator.min.js"></script>
+        main {
+            display: flex;
+            flex: 1;
+        }
 
-<!-- TODO: use CDN version -->
-{{RENDERER_SCRIPT}}
+        textarea {
+            flex: 1;
+            resize: none;
+            display: none;
+        }
+
+        iframe {
+            flex: 2;
+        }
+
+        footer {
+            font-size: small;
+            padding: 3px;
+            background: #f0f0f0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    </style>
+
+    {{SANDBOX_UMD_JS}}
+
+    {{COMPILER_UMD_JS}}
 
 </head>
 
 <body>
+    <main>
+        <textarea id="markdown-input"
+            placeholder="Type your Interactive Document json here...">{{JSON_CONTENT}}</textarea>
+    </main>
 
-    <textarea id="markdown-input" style="display:none;min-height:300px;width:100%;" placeholder="Type your Interactive Document json here...">{{JSON_CONTENT}}</textarea>
-
-    <div id="content"></div>
+    <footer>
+        Powered by <a href="https://microsoft.github.io/chartifact">Chartifact</a>
+    </footer>
 
     <script>
-        IDocs.compiler.bindTextarea(document.getElementById('markdown-input'), document.getElementById('content'));
+        const textarea = document.getElementById('markdown-input');
+        let sandbox;
+        const render = () => {
+            const json = textarea.value;
+            let markdown;
+            try {
+                const interactiveDocument = JSON.parse(json);
+                if (typeof interactiveDocument !== 'object') {
+                    markdown = 'Invalid Interactive Document JSON';
+                } else {
+                    markdown = IDocs.compiler.targetMarkdown(interactiveDocument);
+                }
+            } catch (error) {
+                markdown = 'Failed to parse Interactive Document JSON';
+            }
+            if (!sandbox) {
+                sandbox = new IDocs.sandbox.Sandbox('main', { markdown });
+            } else {
+                sandbox.send({ markdown });
+            }
+        };
+        textarea.addEventListener('input', render);
+        render();
     </script>
 
 </body>
