--- a/packages/vscode/html/json.html
+++ b/packages/vscode/html/json.html
@@ -21,7 +21,6 @@
         textarea {
             flex: 1;
             resize: none;
-            display: none;
         }
 
         iframe {
@@ -38,8 +37,10 @@
         }
     </style>
 
+    <!-- TODO: get this from CDN -->
     {{SANDBOX_UMD_JS}}
 
+    <!-- TODO: get this from CDN -->
     {{COMPILER_UMD_JS}}
 
 </head>
@@ -51,7 +52,8 @@
     </main>
 
     <footer>
-        Powered by <a href="https://microsoft.github.io/chartifact">Chartifact</a>
+        <button onclick="textarea.style.display = (textarea.style.display === 'none' ? '' : 'none')">tweak</button>
+        Powered by <a href="https://microsoft.github.io/chartifact" target="_blank">Chartifact</a>
     </footer>
 
     <script>
@@ -78,6 +80,21 @@
         };
         textarea.addEventListener('input', render);
         render();
+
+        // Bot-friendly content hiding strategy:
+        // 1. Bots that don't execute JS will see the textarea content in full
+        // 2. Bots that execute JS but have short timeouts will see content for 300ms
+        // 3. Human users see no visual flash due to flex:0 + removed padding/border
+        textarea.style.flex = '0';        // Collapse to zero width, no visual space
+        textarea.style.padding = '0';     // Remove default padding that creates pixel shift
+        textarea.style.border = '0';      // Remove default border that creates pixel shift
+        setTimeout(() => {
+            // After 300ms (longer than most bot JS timeouts), restore defaults and hide
+            textarea.style.flex = '';     // Restore original flex value from CSS
+            textarea.style.padding = '';  // Restore original padding from CSS
+            textarea.style.border = '';   // Restore original border from CSS
+            textarea.style.display = 'none'; // Fully hide from users (but they can unhide to edit)
+        }, 300);
     </script>
 
 </body>
