--- a/packages/vscode/html/preview.html
+++ b/packages/vscode/html/preview.html
@@ -4,7 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Document Preview</title>
+    
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
+        body {
+            display: grid;
+            grid-template-rows: auto;
+        }
+    </style>
+
     {{RESOURCE_LINKS}}
+    
 </head>
 <body>
     <div id="loading" style="text-align: center; padding: 50px;">
