--- a/packages/editor/index.html
+++ b/packages/editor/index.html
@@ -17,13 +17,20 @@
 
     <div id="app"></div>
 
+    <!-- sandbox -->
+    <!-- <script type="module">
+        import { App } from './src/app.js';
+        const root = ReactDOM.createRoot(document.getElementById("app"));
+        root.render(React.createElement(App));
+    </script> -->
+
+    <!-- use only for dev mode / local -->
     <script type="module">
-        // use only for dev mode / local
-        import { DevDocumentPreview } from './dev/preview.js';
+        import { DevPreviewer } from './dev/previewer.js';
 
         import { App } from './src/app.js';
         const root = ReactDOM.createRoot(document.getElementById("app"));
-        root.render(React.createElement(App, { DocumentPreview: DevDocumentPreview }));
+        root.render(React.createElement(App, { previewer: DevPreviewer }));
     </script>
 
 </body>
