synchronous reset/destroy

--- a/packages/sandbox/resources/markdown.html
+++ b/packages/sandbox/resources/markdown.html
@@ -22,6 +22,7 @@
                 if (request.markdown) {
                     renderer.render(request.markdown);
                 } else if (request.html) {
+                    renderer.reset();
                     document.body.innerHTML = request.html;
                     renderer.hydrate();
                 }
