default light theme

--- a/packages/vscode/html/edit.html
+++ b/packages/vscode/html/edit.html
@@ -8,6 +8,13 @@
 
     {{RESOURCE_LINKS}}
 
+    <style>
+        body {
+            color: black;
+            background-color: white;
+        }
+    </style>
+
 </head>
 
 <body>
