--- a/packages/vscode/html/preview.html
+++ b/packages/vscode/html/preview.html
@@ -15,6 +15,8 @@
         body {
             display: grid;
             grid-template-rows: auto;
+            color: black;
+            background-color: white;
         }
     </style>
 
