--- a/packages/vscode/html/html-markdown.html
+++ b/packages/vscode/html/html-markdown.html
@@ -47,35 +47,14 @@
 <body>
     <main>
         <textarea id="markdown-input"
-            placeholder="Type your Interactive Document markdown here...">{{MARKDOWN_CONTENT}}</textarea>
+            placeholder="Type your Interactive Document markdown here...">{{TEXTAREA_CONTENT}}</textarea>
     </main>
     <footer>
         <button onclick="textarea.style.display = (textarea.style.display === 'none' ? '' : 'none')">tweak</button>
         Powered by <a href="https://microsoft.github.io/chartifact" target="_blank">Chartifact</a>
     </footer>
 
-    <script>
-        const textarea = document.getElementById('markdown-input');
-        const sandbox = new IDocs.sandbox.Sandbox('main', textarea.value);
-        textarea.addEventListener('input', () => {
-            sandbox.send(textarea.value);
-        });
-
-        // Bot-friendly content hiding strategy:
-        // 1. Bots that don't execute JS will see the textarea content in full
-        // 2. Bots that execute JS but have short timeouts will see content for 300ms
-        // 3. Human users see no visual flash due to flex:0 + removed padding/border
-        textarea.style.flex = '0';        // Collapse to zero width, no visual space
-        textarea.style.padding = '0';     // Remove default padding that creates pixel shift
-        textarea.style.border = '0';      // Remove default border that creates pixel shift
-        setTimeout(() => {
-            // After 300ms (longer than most bot JS timeouts), restore defaults and hide
-            textarea.style.flex = '';     // Restore original flex value from CSS
-            textarea.style.padding = '';  // Restore original padding from CSS
-            textarea.style.border = '';   // Restore original border from CSS
-            textarea.style.display = 'none'; // Fully hide from users (but they can unhide to edit)
-        }, 300);
-    </script>
+    {{HTML_MARKDOWN_JS}}
     
 </body>
 
