move Tweak button handler into typescript

--- a/packages/webview/html/html-json.html
+++ b/packages/webview/html/html-json.html
@@ -54,7 +54,7 @@
     </main>
 
     <footer>
-        <button onclick="textarea.style.display = (textarea.style.display === 'none' ? '' : 'none')">tweak</button>
+        <button id="toggle-textarea">tweak</button>
         Powered by <a href="https://microsoft.github.io/chartifact" target="_blank">Chartifact</a>
     </footer>
 
