--- a/packages/webview/html/html-markdown.html
+++ b/packages/webview/html/html-markdown.html
@@ -50,7 +50,7 @@
             placeholder="Type your Interactive Document markdown here...">{{TEXTAREA_CONTENT}}</textarea>
     </main>
     <footer>
-        <button onclick="textarea.style.display = (textarea.style.display === 'none' ? '' : 'none')">tweak</button>
+        <button id="toggle-textarea">tweak</button>
         Powered by <a href="https://microsoft.github.io/chartifact" target="_blank">Chartifact</a>
     </footer>
 
