--- a/packages/sandbox/resources/markdown.html
+++ b/packages/sandbox/resources/markdown.html
@@ -10,34 +10,9 @@
 
     {{RENDERER_SCRIPT}}
 
-    {{RENDERER_OPTIONS}}
-
     {{RENDER_REQUEST}}
 
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const renderer = new IDocs.markdown.Renderer(document.body, rendererOptions);
-
-            function render(request) {
-                if (request.markdown) {
-                    renderer.render(request.markdown);
-                } else if (request.html) {
-                    renderer.reset();
-                    document.body.innerHTML = request.html;
-                    renderer.hydrate();
-                }
-            }
-
-            render(renderRequest);
-
-            //add listener for postMessage
-            window.addEventListener('message', (event) => {
-                if (!event.data) return;
-                render(event.data);
-            });
-
-        });
-    </script>
+    {{SANDBOX_JS}}
 
 </head>
 
