rename message types

--- a/packages/host-test/postmessage.html
+++ b/packages/host-test/postmessage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Minimal Parent</title>
+    <title>Host postmessage test</title>
 </head>
 <body>
     <h1>Host Test</h1>
