--- a/packages/sandbox/index.html
+++ b/packages/sandbox/index.html
@@ -38,26 +38,26 @@ body {
   <script type="module">
     import { Sandbox } from '/src/index.ts';
     const textarea = document.getElementById('md');
-    const sandbox = new Sandbox(document.body, textarea.value);
+    const sandbox = new Sandbox(document.body, textarea.value, {
+      onReady: () => {
+        console.log('Sandbox is ready');
+      },
+      onError: (error) => {
+        console.error('Sandbox error:', error);
+      },
+      onApprove: (message) => {
+        console.log('Sandbox approval message:', message);
+        return {
+          type: 'sandboxApproval',
+          transactionId: message.transactionId,
+          approved: true,
+          remediated: message.flags,
+        };
+      }
+    });
     window.sandbox = sandbox;
     textarea.addEventListener('input', () => {
       sandbox.send(textarea.value);
-    });
-    window.addEventListener('message', (event) => {
-      if (!event.data) {
-        console.error('No data received from sandbox');
-        return;
-      }
-      if (event.data.type === 'sandboxedPreHydrate') {
-        console.log('Sandbox pre-render received:', event.data);
-        //inspect doc and handle approval
-        const sandboxedApprovalMessage = {
-          type: 'sandboxApproval',
-          transactionId: event.data.transactionId,
-          approved: true // or false based on your logic
-        };
-        sandbox.approve(sandboxedApprovalMessage);
-      }
     });
   </script>
 
