move to dev  typescript

--- a/packages/sandbox/index.html
+++ b/packages/sandbox/index.html
@@ -35,31 +35,7 @@ body {
 ```
 </textarea>
 
-  <script type="module">
-    import { Sandbox } from '/src/index.ts';
-    const textarea = document.getElementById('md');
-    const sandbox = new Sandbox(document.body, textarea.value, {
-      onReady: () => {
-        console.log('Sandbox is ready');
-      },
-      onError: (error) => {
-        console.error('Sandbox error:', error);
-      },
-      onApprove: (message) => {
-        console.log('Sandbox approval message:', message);
-        return {
-          type: 'sandboxApproval',
-          transactionId: message.transactionId,
-          approved: true,
-          remediated: message.flags,
-        };
-      }
-    });
-    window.sandbox = sandbox;
-    textarea.addEventListener('input', () => {
-      sandbox.send(textarea.value);
-    });
-  </script>
+  <script type="module" src="./dev/index.ts"></script>
 
 </body>
 
