add appProps to sandbox script for component rendering

--- a/packages/editor/index.html
+++ b/packages/editor/index.html
@@ -23,8 +23,9 @@
     <!-- sandbox -->
     <!-- <script type="module">
         import { App } from './src/app.js';
+        import { appProps } from './dev/index.js';
         const root = ReactDOM.createRoot(document.getElementById("app"));
-        root.render(React.createElement(App));
+        root.render(React.createElement(App, appProps));
     </script> -->
 
     <!-- use only for dev mode / local -->
