reset renderer before rendering HTML

--- a/packages/markdown/test/index.html
+++ b/packages/markdown/test/index.html
@@ -346,7 +346,8 @@ Click the map above to show related data.
 
         function render() {
             //renderer.render(textarea.value);
-
+            
+            renderer.reset();
             const html = renderer.renderHtml(textarea.value);
             renderer.element.innerHTML = html;
             const specs = renderer.hydrateSpecs();
