add Chartifact to titles

--- a/packages/host/index.html
+++ b/packages/host/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Document Host</title>
+    <title>Chartifact Interactive Document Host</title>
     <style>
         html, body {
             height: 100%;
@@ -28,7 +28,7 @@
     </div>
     
     <div id="help" style="display: none;">
-        <h1>Interactive Document Host</h1>
+        <h1>Chartifact Interactive Document Host</h1>
 
         You can render interactive documents here via several methods:
         <ul>
