--- a/packages/vscode-resources/html/html-json.html
+++ b/packages/vscode-resources/html/html-json.html
@@ -48,7 +48,7 @@
 <body>
     <main>
         <textarea id="markdown-input"
-            placeholder="Type your Interactive Document json here...">{{TEXTAREA_CONTENT}}</textarea>
+            placeholder="Type your Chartifact json here...">{{TEXTAREA_CONTENT}}</textarea>
     </main>
 
     <footer>
