--- a/packages/vscode-resources/html/html-markdown.html
+++ b/packages/vscode-resources/html/html-markdown.html
@@ -45,7 +45,7 @@
 <body>
     <main>
         <textarea id="markdown-input"
-            placeholder="Type your Interactive Document markdown here...">{{TEXTAREA_CONTENT}}</textarea>
+            placeholder="Type your Chartifact markdown here...">{{TEXTAREA_CONTENT}}</textarea>
     </main>
 
     <footer>
