--- a/packages/sandbox/index.html
+++ b/packages/sandbox/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interactive Document Sandbox</title>
+  <title>Chartifact Interactive Document Sandbox</title>
   <style>
     body {
       display: flex;
