--- a/packages/host/index.html
+++ b/packages/host/index.html
@@ -54,6 +54,11 @@
             uploadButton: '#upload-btn',
             fileInput: '#file-input',
             textarea: '#textarea',
+            onApprove: (message) => {
+            // TODO look through each spec and override policy to approve unapproved for https://microsoft.github.io/chartifact/
+            const { specs } = message;
+            return specs;
+        }
         });
     </script>
 
