--- a/packages/compiler/index.html
+++ b/packages/compiler/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mdv test</title>
+    <title>Chartifact Compiler test</title>
 
+    <!-- TODO: get chartifact css reset -->
+     
     <link href="https://unpkg.com/tabulator-tables@6.3.0/dist/css/tabulator.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/markdown-it/dist/markdown-it.min.js"></script>
     <script src="https://unpkg.com/css-tree/dist/csstree.js"></script>
