add sample notes to JSON input for testing purposes

--- a/packages/compiler/index.html
+++ b/packages/compiler/index.html
@@ -58,6 +58,12 @@
         <textarea id="json-input" placeholder="Type your Interactive Document json here...">
 {
     "$schema": "../../../schema/idoc_v1.json",
+    "notes": [
+        "This is a test document for the Chartifact compiler.",
+        "It includes various data sources and a simple chart.",
+        9,
+        {"foo": "bar", "baz": 9}
+    ],
     "title": "Feature: Data Sources",
     "dataLoaders": [
         {
