remove inline styles from toolbar for cleaner markup

--- a/packages/host/index.html
+++ b/packages/host/index.html
@@ -21,7 +21,7 @@
 
 <body>
 
-    <div id="toolbar" style="border-bottom: 1px solid #ccc; padding: 5px;"></div>
+    <div id="toolbar"></div>
 
     <textarea id="textarea" style="width: 100%; height: 300px; display: none;" placeholder="Enter your markdown here..."></textarea>
 
