--- a/packages/vscode-resources/html/html-json.html
+++ b/packages/vscode-resources/html/html-json.html
@@ -5,43 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{TITLE}}</title>
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            height: 100vh;
-            margin: 0;
-        }
-
-        main {
-            display: flex;
-            flex: 1;
-        }
-
-        textarea {
-            flex: 1;
-            resize: none;
-        }
-
-        #app {
-            flex: 2;
-        }
-    </style>
-
-    <!-- TODO: get this from CDN -->
-    {{SANDBOX_UMD_JS}}
-
-    <!-- TODO: get this from CDN -->
-    {{COMPILER_UMD_JS}}
-
+    <link rel="stylesheet" href="https://microsoft.github.io/chartifact/dist/v1/chartifact-toolbar.css" />
+    <script src="https://microsoft.github.io/chartifact/dist/v1/chartifact.sandbox.umd.js"></script>
+    <script src="https://microsoft.github.io/chartifact/dist/v1/chartifact.compiler.umd.js"></script>
 </head>
 
 <body>
 
-    <header>
-        <button id="toggle-textarea">tweak</button>
-        Powered by <a href="https://microsoft.github.io/chartifact" target="_blank">Chartifact</a>
-    </header>
+    <header id="toolbar"></header>
 
     <main>
         <textarea id="markdown-input"
